# kturtle

./: .gitignore  .vercelignore  BUILD.md  README.md  capacitor.config.json  index.html  package-lock.json  package.json  preview.html  vercel.json  vite.config.ts
.devcontainer/: devcontainer.json  run-appimage.sh
.github/workflows/: pages.yml  release.yml
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kturtle/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
docs/: index.html
public/: preview.html
public/fonts/: fonts.css
scripts/: fetch-fonts.ps1  install-linux.sh  vercel-build.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CodeEditor.tsx  ColorPicker.tsx  InspectorPane.tsx  MobileShell.tsx  OpenFileDialog.tsx  Popover.tsx  SVGConverter.tsx  SplitPane.tsx  TurtleCanvas.tsx
src/examples/: flower.ts  horse.ts  index.ts  spiral.ts  square.ts  star.ts  tree.ts
src/i18n/: context.tsx  strings.ts
src/interpreter/: errors.ts  interpreter.ts  ktFileFormat.ts  parser.ts  tokenizer.ts
src/platform/: native-init.ts
src/utils/: exportSvg.ts  nativeIO.ts  recentFiles.ts  useBreakpoint.ts
